Project 5 - Fixed column wraps

--- a/techdegree/proj5/css/application.css
+++ b/techdegree/proj5/css/application.css
@@ -48,8 +48,6 @@ img {
   padding: 0; }
 
 figure {
-  float: right;
-  width: 40%;
   margin: 0;
   margin-top: 1em; }
 
@@ -70,7 +68,6 @@ footer {
   padding: 0 0 4em 0; }
 
 .col-2 {
-  width: 50%;
   vertical-align: top;
   padding-left: 4px;
   padding-right: 4px; }
@@ -180,7 +177,10 @@ footer p, .wide {
 @media (min-width: 769px) {
   .container, .banner, .skills {
     width: 90%;
-    max-width: 1050px; } }
+    max-width: 1050px; }
+
+  .col-2 {
+    width: 50%; } }
 /* ---- Page  Ids and Classes ---- */
 .main-header {
   background: #fafafa;
@@ -229,7 +229,11 @@ footer p, .wide {
   .banner p {
     float: left;
     text-align: left;
-    width: 55%; } }
+    width: 55%; }
+
+  figure {
+    float: right;
+    width: 40%; } }
 @media (min-width: 1050px) {
   .main-nav {
     float: right; }
