--- a/techdegree/proj5/scss/base/_base.scss
+++ b/techdegree/proj5/scss/base/_base.scss
@@ -39,8 +39,6 @@ img {
 	@include pad0;
 }
 figure {
-	float: right;
-	width: 40%;
 	margin: 0;
 	margin-top: 1em;
 }
