--- a/techdegree/proj5/scss/layouts/_columns.scss
+++ b/techdegree/proj5/scss/layouts/_columns.scss
@@ -5,7 +5,6 @@
 	padding: 0 0 4em 0;
 }
 .col-2 {
-	width: 50%;
 	vertical-align: top;
 	padding-left: 4px;
 	padding-right: 4px;
